@@ -1,3 +1,9 @@
+2013-02-02 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
+
+	* filter.c:
+	    Coverity reports over aprsc reflect directly to aprx too.
+	    We use same code in parts...
+
 2012-12-29 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
 
 	* digipeater.c, aprx.h, historydb.h:
